--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<link rel="stylesheet" type="text/css" href="https://github.com/FireCat16/https://firecat16.github.io/blob/master/style.css">
+
 <html lang="en">
 
 
