--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="https://github.com/FireCat16/https://firecat16.github.io/blob/master/style.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/FireCat16/https://firecat16.github.io/blob/master/stylesheet.css">
 
 <html lang="en">
 
