--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ QCDZD53dE4X3_3WOXt-O3pc3LyJSPc6he3NL3dDvw7bIKh-hHeC5IffQF5Hq0MppKv1oESCvdxURgolw
 
 <div>
     <br><br> <b> 5. SUNSET </b>
-    <img src=""
+    <img src="20210327_140917.jpg"
          alt="Sunset"
          width="9%"
          border ="2px"
          align="right"
-    ><img src="../../Downloads/20210327_140917.jpg" height="1048" width="1233"/>
+    >
     <br> - Dangerous outcast competing for Bella's paw in marriage against Muzhik.
     <br> - Not neutered, and lives in the forest, coming to fight once in a while.
     <br>- Hottie of the cat hood.
